<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"

    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_name1"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="447dp"
            android:layout_marginBottom="50dp"
            android:paddingBottom="0dp"
            app:srcCompat="@drawable/images" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="390dp"
            android:background="@drawable/roundedbutton"

            android:text="@string/button_text5" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="480dp"
            android:text="@string/text_name2"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            app:srcCompat="@drawable/images" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="860dp"
            android:layout_marginEnd="150dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/button_text6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="950dp"
            android:text="@string/text_name3"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="919dp"
            app:srcCompat="@drawable/images" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="1330dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/button_text7" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="1450dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/button_text8" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="200dp"
            android:layout_marginTop="1420dp"
            android:background="@drawable/roundedbutton"
            android:onClick="browser1"
            android:text="@string/button_text"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="314dp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="400dp"
            android:layout_marginTop="1450dp"
            android:background="@drawable/roundedbutton"
            android:onClick="browser2"
            android:text="@string/button_text2" />

        <Button
            android:id="@+id/button23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1450dp"
            android:background="@drawable/roundedbutton"
            android:onClick="browser3"
            android:text="@string/button_text3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="1450dp"
            android:background="@drawable/roundedbutton"
            android:onClick="browser4"
            android:text="@string/button_text4" />


    </RelativeLayout>
</ScrollView>